Revert "ESHOP-16(unit and integration tests) (#20)"
This reverts commit 8852604763bc96cf669fc4360240682d2a6b9c1e.